sun/nio/cs/TestStringCoding.java fails intermittently with getBytes(csn) failed -> GBK

XMLWordPrintable

    • b36
    • 10
    • b40
    • Verified

        I suspect it's related to the specified test machine because it only failed once:
        ----------System.out:(8/267)----------
        Testing(sm=false) Big5....done!
        Testing(sm=false) Big5-HKSCS....done!
        Testing(sm=false) CESU-8....done!
        Testing(sm=false) EUC-JP....done!
        Testing(sm=false) EUC-KR....done!
        Testing(sm=false) GB18030....done!
        Testing(sm=false) GB2312....done!
        Testing(sm=false) GBK....
        ----------System.err:(14/892)----------
        java.lang.RuntimeException: getBytes(csn) failed -> GBK
        at TestStringCoding.testGetBytes(TestStringCoding.java:164)
        at TestStringCoding.main(TestStringCoding.java:82)

              Assignee:
              Roland Westrelin
              Reporter:
              Frank Yuan (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: