8193597: sun/nio/cs/TestStringCoding.java fails intermittently with getBytes(csn) failed -> GBK

Should not change loop limit check of outer loop.

Reviewed-by: thartmann